--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
+    "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
