--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,20 +14,21 @@ jobs:
     runs-on: self-hosted
     timeout-minutes: 10
 
+    defaults:
+      run:
+        working-directory: /var/www/sliot/SLIoT-Challenge-2025
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - name: Pull latest changes
+        run: |
+          echo "=== Pulling latest changes ==="
+          git fetch origin main
+          git reset --hard origin/main
 
       - name: Install dependencies
         run: npm ci --no-progress
-        working-directory: /var/www/sliot/SLIoT-Challenge-2025
 
       - name: Build
-        run: npm run build
-        working-directory: /var/www/sliot/SLIoT-Challenge-2025
-
-      - name: Sync build output
         run: |
-          echo "=== Syncing build to deployment directory ==="
-          rsync -av --delete $GITHUB_WORKSPACE/dist/ /var/www/sliot/SLIoT-Challenge-2025/dist/
+          npm run build
           echo "=== Deployment complete ==="
